# robotics_sw_projects

./: CMakeLists.txt  README.md
include/: color_tracking.cpp
include/Logger/: Logger.hpp
include/SpScIntBuffer/: SpScIntBuffer.h
include/camera_calibration/: CameraCalibration.cpp  CompareCalibration.cpp
include/circular_buffer/: CMakeLists.txt  CircularBuffer.h
include/kalman_filter/: kalmanfilter1d.cpp
include/memory_pool/: memory_pool.h
include/packet_parser/: PacketParser.cpp
include/robot_localization/: Odometry.h  Pose2d.h
include/usb_debug/: UsbDebug.cpp
src/: Odometry.cpp
test/: CMakeLists.txt  test_circular_buffer.cpp  test_circular_buffer_ts.cpp  test_memory_pool.cpp  test_odometry.cpp  test_parser.cpp
